--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-router-dom": "^4.2.2"
+    "animated": "^0.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.0"
   }
 }
