--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "devDependencies": {
     "classnames": "^2.2.5",
+    "js.cookie": "0.0.4",
+    "password-hash": "^1.2.2",
     "react-router-dom": "^4.2.2",
-    "react-validation": "^3.0.7"
+    "react-validation": "^3.0.7",
+    "set-cookie": "0.0.4"
   }
 }
