--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
+    "react-anchor-link-smooth-scroll": "^1.0.9",
     "react-dom": "^16.0.0",
     "react-responsive": "^4.1.0",
     "react-scripts": "1.0.13"
@@ -21,7 +22,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "js.cookie": "0.0.4",
     "password-hash": "^1.2.2",
     "react-router-dom": "^4.2.2",
