--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "i": "^0.3.6",
+    "js-cookie": "^2.2.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "node-sass-chokidar": "0.0.3",
+    "npm": "^6.1.0",
     "npm-run-all": "^4.1.1",
-    "react": "^16.0.0",
+    "react": "^16.4.1",
+    "react-add-to-calendar": "^0.1.5",
     "react-anchor-link-smooth-scroll": "^1.0.9",
-    "react-dom": "^16.0.0",
+    "react-cookie": "^1.0.5",
+    "react-dom": "^16.4.1",
     "react-responsive": "^4.1.0",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "universal-cookie": "^2.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
